pkg/sandbox/src/style.css
:root {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;

    --bg: #f0f0f0;
    --bg-hover: #f6f6f6;
    --bg-muted: #e0e0e0;
    --bg-monaco: #fff;
    --fg: #333;
    --border: #ccc;
    --shadow: rgba(0, 0, 0, 0.1);
}

html, body {
    margin: 0;
    padding: 0;
    height: 100%;

    background-color: var(--bg);
    color: var(--fg);
}

.container {
    display: grid;
    place-items: center;
    height: 100%;
}

.editor {
    display: grid;
    grid-template-rows: auto 1fr;
    border: 1px solid var(--border);
    width: 80%;
    height: 80%;
    border-radius: 8px;
}

.header {
    border-bottom: 1px solid var(--border);
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    overflow: hidden;

    &:has(+ #monaco-editor:empty) {
        display: none;
    }
}

.tab {
    vertical-align: middle;
    border: unset;
    display: inline-flex;
    align-items: center;
    gap: 0.5rem;
    padding: 1rem;
    width: fit-content;
    background-color: transparent;
    transition: background-color 0.2s ease, box-shadow 0.2s ease;
    margin-inline: 0;
    cursor: pointer;

    &:hover {
        background-color: var(--bg-hover);
    }

    &.selected {
        background-color: var(--bg-muted);
        box-shadow: inset 0 0 2px 0 var(--shadow);
    }

    &:focus-visible {
        outline: 0;
        box-shadow: 0 0 0 2px var(--shadow);
    }
}

.title {
    margin: unset;
    font-size: inherit;
    font-weight: inherit;
    flex: 1;
}

.icon {
    width: 0.8rem;
    height: 0.8rem;
}

#monaco-editor {
    background-color: var(--bg-monaco);
    border-bottom-right-radius: 8px;
    border-bottom-left-radius: 8px;

    .monaco-editor {
        --vscode-editor-background: transparent;
        --vscode-editorGutter-background: transparent;
    }
}

@media (max-width: 725px) {
    .editor {
        width: 100%;
        height: 100%;
        border-radius: 0;
        border: none;
    }
}

